# chatbot-groq-ai

./: .env.example  .gitignore  Chatbot-01.ipynb  Chatbot-Conectores.ipynb  Chatbot-Final.ipynb  README.MD  pyproject.toml  requirements.txt
data/: video.md  video.txt
