[project]
name = "chatbot-groq-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Gabriel de Almeida",email = "156014432+LucasG-Alm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "youtube-transcript-api (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
